# r-rmcgibbo

./: .gitignore  README.md  default.nix  flake.nix
.github/workflows/: action.yml
nixbot-backend/: default.nix  pyproject.toml
nixbot-backend/src/nixbot_backend/: backend.py  block_github_comment.py  build-times.fst  compile_fst.py  drvparse.py  github.py  graphtheory.py  nix.py  nixpkgs_hammer.py  post_build_hook.py  pre_build_filter.py  utils.py
nixbot-common/: default.nix  pyproject.toml
nixbot-common/src/nixbot_common/: __init__.py  nix_build.sql  nixpkgs_review_dispatched.sql  nixpkgs_review_finished.sql
nixbot-frontend/: default.nix  pyproject.toml
nixbot-frontend/src/nixbot_frontend/: __init__.py  frontend.py  nixpkgs.py  server.py
